--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -192,25 +192,23 @@
 }
 
 .sd-element__content--fade-in {
-  animation-name: fadeIn, moveIn, paddingFadeIn, overflowIn;
+  animation-name: fadeIn, moveInWithOverflow, paddingFadeIn;
   min-height: 0 !important;
   opacity: 0;
   animation-fill-mode: forwards;
   animation-timing-function: $ease-out;
-  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration,
-    $expand-move-in-duration;
-  animation-delay: $expand-fade-in-delay, 0s, 0s, 0s;
+  animation-duration: $expand-fade-in-duration, $expand-move-in-duration, $expand-move-in-duration;
+  animation-delay: $expand-fade-in-delay, 0s, 0s;
 }
 
 .sd-element__content--fade-out {
-  animation-name: fadeIn, moveIn, paddingFadeIn, overflowIn;
+  animation-name: fadeIn, moveInWithOverflow, paddingFadeIn;
   min-height: 0 !important;
   animation-direction: reverse;
   animation-fill-mode: forwards;
   animation-timing-function: $reverse-ease-out;
-  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration,
-    $expand-move-in-duration;
-  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay, $collapse-move-out-delay;
+  animation-duration: $collapse-fade-out-duration, $collapse-move-out-duration, $collapse-move-out-duration;
+  animation-delay: 0s, $collapse-move-out-delay, $collapse-move-out-delay;
 }
 
 .sd-element--expandable.sd-elemenet--expandable--animating {
